Prevented the collapsible navbar from jumping to another row after it is triggered and user resizes the window.

--- a/labs/meteor-client/app/client/stylesheets/portrait/style.less
+++ b/labs/meteor-client/app/client/stylesheets/portrait/style.less
@@ -149,7 +149,11 @@
     .navbarTitle {
       font-size: 16px;
       padding-top: 13px;
-      width: calc(~'100% - 102.4px')
+      width: calc(~'100% - 102.4px');
+    }
+
+    .narrowedNavbarTitle {
+      width: calc(~'100% - 358.4px') !important;
     }
 
     .title {
